--- a/assest/css/cus.css
+++ b/assest/css/cus.css
@@ -8,20 +8,51 @@
   background-size: cover;
   background-image: url(/assest/img/background-call-to-action.6a5a5672.jpg);
 }
-.bg-img1 {
+.loading {
   width: 100%;
-  height: 120vh;
-  object-fit: cover;
-  background-size: cover;
-  background-image: url(/assest/img/apple/background-faqs.55d2e36a.jpg);
+  height: 100vh;
+  background-color: white;
+  position: fixed;
+  top: 0%;
+  left: 0%;
+  transition: 0.5s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 30;
 }
-
-
-@media screen and (max-width: 460px) {
-     .d-no{
-       display:none;
-     }
-     .bg-img1{
-        height:220vh;
-     }
+.loader {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  display: inline-block;
+  border-top: 4px solid #67e8f9;
+  border-right: 4px solid transparent;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
 }
+.loader::after {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  border-left: 4px solid #3b82f6;
+  border-bottom: 4px solid transparent;
+  animation: rotation 0.5s linear infinite reverse;
+}
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.active-link {
+  border-bottom: 3px solid;
+  transition: 0.2s linear;
+  color: #2563eb;
